# geas

./: pyproject.toml
docs/: design.md
geas/: func.py  planner.py  serde.py  task.py
tests/: test_serde.py
